# elbmesh

./: AGENTS.md  Cargo.toml  docker-compose.yml  opencode.json  ppp.config.json  ppp.repo-config.json  ppp.workflows.json  restate-server.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: decision-request.md  documentation-task.md  implementation-task.md
.github/workflows/: rust-ci.yml
.opencode/: package-lock.json  package.json
.opencode/agents/: elbmesh-implementer.md  elbmesh-operations.md  elbmesh-orchestrator.md  elbmesh-pr-publisher.md  elbmesh-reviewer.md  elbmesh-test-writer.md
.opencode/plugins/: ppp-local.ts  ppp.ts
.ppp/: README.md
.ppp/schemas/: item.schema.json  repo-config.schema.json  tag.schema.json  task.schema.json
.ppp/task-cards/: feature-2026-07-07T21-11-13-106Z-smoke-test-persisted-task-card.md  feature-2026-07-07T21-14-32-681Z-smoke-test-ppp-feature-workflow-assembly-and-loc.md  feature-2026-07-07T21-19-28-843Z-complete-the-in-memory-elbmesh-reference-flow-re.md  feature-2026-07-07T21-54-24-255Z-add-declared-flow-status-query-support-for-the-i.md
crates/elbmesh-core/: Cargo.toml
crates/elbmesh-core/src/: action_journal.rs  capability.rs  error.rs  external_operation.rs  lib.rs  manifest.rs  message.rs  operation_journal.rs  projection.rs  query.rs  reaction.rs  reaction_journal.rs  runtime.rs  store.rs  testing.rs  traits.rs  view_store.rs
crates/elbmesh-core/tests/: action_context_external_operation.rs  action_executor.rs  action_journal.rs  agent_delivery_harness.rs  architecture_manifest.rs  capability_document.rs  cross_resource_action_events.rs  event_store_contract.rs  external_operation.rs  issue_121_dependency_roadmap_status_contract.rs  nats_harness.rs  nats_native_stream_protocol.rs  operation_journal.rs  projection_checkpoint_contract.rs  projection_runtime.rs  query_runtime.rs  reaction_journal.rs  reaction_runtime.rs  reference_flow.rs  restate_harness.rs  view_store.rs
crates/elbmesh-core/tests/support/: mod.rs  nats.rs  restate.rs
docs/: AGENT_DELIVERY_HARNESS.md  AGENT_SKILLS.md  DELIVERY_ROADMAP.md  DEVELOPMENT_WORKFLOW.md  EXECUTION_TRACE_MODEL.md  GLOSSARY.md  GOAL.md  HUMAN_DECISION_LOOP.md  IMPLEMENTATION_PLAN.md  NATS_ADAPTER_TEST_HARNESS.md  OFFER_DEMONSTRATION_RUN_PLAN.md  PHASED_DELIVERY_PLAN.md  PHASE_4_REFERENCE_FLOW_CHECKPOINT.md  PHASE_6_REACTIONS_VIEWS_CHECKPOINT.md  PHASE_8_NATS_EXTERNAL_OPERATIONS_CHECKPOINT.md  README.md  RESOURCE_CAPABILITIES.md  RESTATE_ADAPTER_TEST_HARNESS.md  RUNTIME_DEBT_AND_FAILURE_MODES.md  resource-bindings.rs  resource-capabilities.json
docs/adr/: 0001-event-sourcing-framework-vocabulary.md  0002-resource-component-boundary.md  0003-actions-events-receipts-and-journals.md  0004-external-operations-and-restate.md  0005-nats-streams-and-message-metadata.md  0006-schema-generated-bindings-and-handwritten-behavior.md  (+13 more)
(+13 files in other folders)
