[package]
name = "elbmesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
nats-adapter = ["dep:async-nats", "dep:futures-util"]
nats-tests = ["nats-adapter"]
restate-adapter = ["dep:reqwest", "dep:restate-sdk"]

[dependencies]
async-nats = { version = "0.49", default-features = false, features = ["jetstream", "kv", "nuid"], optional = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
restate-sdk = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
